migrated to React but strange behavior

--- a/pages/components/bezier.module.css
+++ b/pages/components/bezier.module.css
@@ -15,7 +15,7 @@
     /* overflow: visible !important; */
 }
 
-path {
+path.default {
     stroke-width: 1.5px;
     fill: none;
     stroke: #999;
